[gd_scene load_steps=4 format=3 uid="uid://boa1gc3ii0yjs"]

[ext_resource type="PackedScene" uid="uid://cedbcpo7djx40" path="res://scenes/world_icon.tscn" id="1_0801x"]
[ext_resource type="Script" path="res://scripts/world_select.gd" id="1_oh0o2"]
[ext_resource type="PackedScene" uid="uid://csm5l0pjc7vtq" path="res://UI/player_icon.tscn" id="3_ud4u5"]

[node name="World_Select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oh0o2")

[node name="World_Icon" parent="." instance=ExtResource("1_0801x")]
offset_left = 32.0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 96.0

[node name="World_Icon2" parent="." instance=ExtResource("1_0801x")]
offset_left = 96.0
offset_top = 32.0
offset_right = 128.0
offset_bottom = 64.0
world_index = 2

[node name="World_Icon3" parent="." instance=ExtResource("1_0801x")]
offset_left = 160.0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 96.0
world_index = 3

[node name="World_Icon4" parent="." instance=ExtResource("1_0801x")]
offset_left = 224.0
offset_top = 96.0
offset_right = 257.0
offset_bottom = 128.0
world_index = 4

[node name="Player_Icon" parent="." instance=ExtResource("3_ud4u5")]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
